--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,3 +59,27 @@ ul{
     display: flex;
     justify-content: space-around;
 }
+
+.banner{
+    width: 100%;
+    height: 400px;
+    background-image: url("../Images/meta_mundo.jpg");
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 20px; */
+}
+
+.btn{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 8px 12px;
+    border-radius: 8px;
+}
+
+.banner .btn{
+    margin-top: 230px;
+}
