--- a/CSS/style.css
+++ b/CSS/style.css
@@ -69,6 +69,7 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
     /* margin-top: 20px; */
 }
 
@@ -82,4 +83,33 @@ ul{
 
 .banner .btn{
     margin-top: 230px;
+}
+
+.sobre{
+    background-image: url("../Images/Teams/T6.jpg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0% 100%);
+    width: 100%;
+    min-height: 350px;
+    margin: 20px 0;
+    color: white;
+    padding: 100px 0;
+}
+
+.sobre .container{
+    display: flex;
+    justify-content: flex-start;
+}
+
+.sobre .container div{
+    width: 40%;
+}
+
+.campea{
+    position: absolute;
+    right: 15%;
+    top: 470px;
+
 }
