--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,9 @@
 body{
     background-color: var(--background);
     font-family: 'Titillium Web', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
 }
 .gradient{
@@ -162,3 +165,203 @@ ul{
 .em_breve{
     width: 65%;
 }
+.content{
+    display: flex;
+    color: white;
+}
+.noticias{
+    width: 70%;
+    padding-right: 40px;
+    display: flex;
+    flex-flow: wrap;
+}
+.card{
+    width: 28%;
+    margin: 2%;
+    box-shadow: 0px 2px 6px #000000;
+    background: rgb(2, 0 ,36);
+    background: linear-gradient(0deg, rgba(0, 0 , 0, 1) 0%, rgba(30, 28, 33,1) 30%, rgba(30,28,33,1) 100%);    
+}
+.card img{
+    width: 100%;
+    height: 140px;
+}
+.card h4, .card p{
+    padding: 1em 0 0 1em;
+}
+.card p{
+    padding: 1em;
+    font-size: 0.8em;
+}
+.recentes{
+    padding: 1.5em;
+    box-shadow: 0px 2px 6px #000000;
+    background: rgb(2, 0 ,36);
+    background: linear-gradient(0deg, rgba(0, 0 , 0, 1) 0%, rgba(30, 28, 33,1) 30%, rgba(30,28,33,1) 100%); 
+}
+.resultado{
+    text-align: center;
+    margin: 1.2em 0; 
+}
+.resultado img {
+    width: 35px;
+}
+.placar{
+    font-size: 1.2em;
+    text-shadow: 3px 3px 6px #000000;
+}
+footer{
+    box-shadow: 0px 0px 20px #000000;
+    color: white;
+    margin-top: 30px;
+    background-color: #1E1C21;
+}
+footer .container{
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+}
+footer ul{
+    list-style-type: none;
+}
+footer .sociais{
+    display: flex;
+    justify-content: space-evenly;
+    color: var(--purple);
+    font-size: 2em;
+    padding: 1.3em 0px;
+}
+footer h5{
+    padding-bottom: 1.2em;
+    color: #aaaaaa;
+    font-size: 1.7em;
+}
+footer h6{
+    text-align: end;
+    font-size: 1.1em;
+}
+footer p{
+    text-align: center;
+}
+
+/* PÁGINA DE CADASTRO*/
+.titulo_pagina{
+    width: 100%;
+    height: 300px;
+    background-image: url(../Images/cadastro.png);
+    background-attachment: fixed;
+    background-size: contain;
+    background-repeat: no-repeat;
+    color: white;
+    display:  flex;
+    justify-content: center;
+    align-items: flex-start;
+    text-transform: uppercase;
+    padding-top: 3em;
+}
+.form_cadastro{
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0px 0px 20px #000000;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    margin-top: 3em;
+    margin-bottom: 5em;
+    padding: 1.5em;
+}
+.campo{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    margin-bottom: 0.5em;
+}
+.campo label{
+    text-transform: uppercase;
+}
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"],
+select{
+    border: none;
+    background-color: #1E1C21;
+    color: #ccc;
+    border-bottom: 1px solid #47474747;
+    width: 60%;
+    padding: 0.4em;
+}
+input[type="date"]{
+    text-align: center;
+    font-size: 1.1em;
+}
+input:focus select:focus{
+    outline: none;
+    background-color: #474747;
+    box-shadow: 0 0 5px #474747;
+    border-bottom: 1px solid var(--purple);
+}
+fieldset{
+    width: 100%;
+    border: none;
+}
+fieldset legend{
+    text-transform: uppercase;
+}
+input[type="radio"]{
+    margin-right: 0.1em;
+}
+fieldset label{
+    margin-right: 0.5em;
+}
+.termos{
+    align-items: center;
+    justify-content: center;
+}
+.termos label{
+    text-transform: lowercase;
+    margin-left: 0.5em;
+}
+.form_cadastro button{
+    border: none;
+    width: 60%;
+    margin-top: 2em;
+    cursor: pointer;
+    margin: auto;
+}
+@media screen and (max-width: 1200px){
+    .campea{
+        right: 0%;
+    }
+    .sobre .container div{
+        width: 50%;
+    }
+    .container{
+        width: 95%;
+    }
+    
+}/*fim mededia 1200px*/
+@media screen and (max-width: 768px){
+    .header img{
+        max-width: 100px;
+    }
+    .container{
+        width: 98%;
+    }
+    .campea{
+        width: 50%;    
+        max-width: 500px;
+        margin-top: 100px;
+        right: -52px;
+    }
+    .sobre .container div{
+        width: 55%;
+        margin-left: 30px;
+    }
+}/*fim medida 768px*/
