--- a/CSS/style.css
+++ b/CSS/style.css
@@ -364,4 +364,40 @@ fieldset label{
         width: 55%;
         margin-left: 30px;
     }
+    .ao_vivo{
+        padding: 5.3em 5px;
+        width: 50%;
+        flex-wrap: wrap;
+    }
+    .em_breve{
+        width: 50%;
+        flex-wrap: wrap;
+    }
+    .em_breve .partida{
+        margin: 0.5em 0;
+    }
+    .noticias{
+        flex-direction: column;
+    }
+    .card{
+        width: 100%;
+        display: flex;
+    }
+    .card img{
+        width: 40%;
+        margin-top: 15px;
+        margin-left: 10px;
+    }
+    footer .container{
+        padding-top: 0.3em;
+        width: 94%;
+    }
+    .mob_logo_sociais{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .mob_logo_sociais img{
+        max-width: 180px;
+    }
 }/*fim medida 768px*/
