--- a/CSS/style.css
+++ b/CSS/style.css
@@ -436,16 +436,44 @@ fieldset label{
     .campea{
         display: none;
     }
-    /* .banner{
-        background-size: 460px;
-        background-repeat: no-repeat;
-        margin: -71px 0px;
-    } */
-    .btn{
-        margin: 40px auto;
-        max-width: 95px;
-        padding: 10px 10px;
-        max-height: 40px;
-        font-size: 10px;
+    .sobre .container div{
+        width: 90%;
+        text-align: justify;
+    }
+    .sobre .container h1{
+        text-align: center;
+        margin-bottom: 1em;
+    }
+    #horarios .container{
+        flex-direction: column;
+    }
+    .ao_vivo, .em_breve{
+        padding: 1em;
+        border: none;
+    }
+    .partida{
+        margin: 1em 0;
+    }
+    /*Seção Notícias*/
+    .card{
+        flex-direction: column;  
+    }
+    .card img{
+        width: 100%;
+        object-fit: cover;
+        object-position: top;
+    }
+    .noticias{
+        width: 95%;
+        padding-right: 15px;
+    }
+    .recentes{
+        padding: 0.5em;
+    }
+    .content{
+        flex-direction: column;
+    }
+    footer .container{
+        flex-direction: column;
     }
 }
